; ModuleID = '/home/carl/AnghaBench/darwin-xnu/bsd/netkey/extr_key.c_key_get_outgoing_ifindex_from_message.c'
source_filename = "/home/carl/AnghaBench/darwin-xnu/bsd/netkey/extr_key.c_key_get_outgoing_ifindex_from_message.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.sadb_msghdr = type { i64* }
%struct.sadb_x_ipsecif = type { i64* }
%struct.TYPE_3__ = type { i32 }

@llvm.used = appending global [1 x i8*] [i8* bitcast (i32 (%struct.sadb_msghdr*, i32)* @key_get_outgoing_ifindex_from_message to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32 @key_get_outgoing_ifindex_from_message(%struct.sadb_msghdr* %0, i32 %1) #0 {
  %3 = alloca %struct.sadb_msghdr*, align 8
  %4 = alloca i32, align 4
  %5 = alloca %struct.sadb_x_ipsecif*, align 8
  %6 = alloca %struct.TYPE_3__*, align 8
  store %struct.sadb_msghdr* %0, %struct.sadb_msghdr** %3, align 8
  store i32 %1, i32* %4, align 4
  store %struct.sadb_x_ipsecif* null, %struct.sadb_x_ipsecif** %5, align 8
  store %struct.TYPE_3__* null, %struct.TYPE_3__** %6, align 8
  %7 = load %struct.sadb_msghdr*, %struct.sadb_msghdr** %3, align 8
  %8 = getelementptr inbounds %struct.sadb_msghdr, %struct.sadb_msghdr* %7, i32 0, i32 0
  %9 = load i64*, i64** %8, align 8
  %10 = load i32, i32* %4, align 4
  %11 = sext i32 %10 to i64
  %12 = getelementptr inbounds i64, i64* %9, i64 %11
  %13 = load i64, i64* %12, align 8
  %14 = inttoptr i64 %13 to i8*
  %15 = bitcast i8* %14 to %struct.sadb_x_ipsecif*
  store %struct.sadb_x_ipsecif* %15, %struct.sadb_x_ipsecif** %5, align 8
  %16 = load %struct.sadb_x_ipsecif*, %struct.sadb_x_ipsecif** %5, align 8
  %17 = icmp ne %struct.sadb_x_ipsecif* %16, null
  br i1 %17, label %18, label %31

18:                                               ; preds = %2
  %19 = load %struct.sadb_x_ipsecif*, %struct.sadb_x_ipsecif** %5, align 8
  %20 = getelementptr inbounds %struct.sadb_x_ipsecif, %struct.sadb_x_ipsecif* %19, i32 0, i32 0
  %21 = load i64*, i64** %20, align 8
  %22 = getelementptr inbounds i64, i64* %21, i64 0
  %23 = load i64, i64* %22, align 8
  %24 = icmp ne i64 %23, 0
  br i1 %24, label %25, label %30

25:                                               ; preds = %18
  %26 = load %struct.sadb_x_ipsecif*, %struct.sadb_x_ipsecif** %5, align 8
  %27 = getelementptr inbounds %struct.sadb_x_ipsecif, %struct.sadb_x_ipsecif* %26, i32 0, i32 0
  %28 = load i64*, i64** %27, align 8
  %29 = call i32 @ifnet_find_by_name(i64* %28, %struct.TYPE_3__** %6)
  br label %30

30:                                               ; preds = %25, %18
  br label %31

31:                                               ; preds = %30, %2
  %32 = load %struct.TYPE_3__*, %struct.TYPE_3__** %6, align 8
  %33 = icmp ne %struct.TYPE_3__* %32, null
  br i1 %33, label %34, label %38

34:                                               ; preds = %31
  %35 = load %struct.TYPE_3__*, %struct.TYPE_3__** %6, align 8
  %36 = getelementptr inbounds %struct.TYPE_3__, %struct.TYPE_3__* %35, i32 0, i32 0
  %37 = load i32, i32* %36, align 4
  br label %39

38:                                               ; preds = %31
  br label %39

39:                                               ; preds = %38, %34
  %40 = phi i32 [ %37, %34 ], [ 0, %38 ]
  ret i32 %40
}

declare dso_local i32 @ifnet_find_by_name(i64*, %struct.TYPE_3__**) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
